@@ -34,20 +34,23 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
+				<version>3.0.0-M3</version>
 				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
-					<skip>false</skip>
-					<reuseForks>false</reuseForks>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
 					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-					<argLine>-Dfile.encoding=UTF-8</argLine>
 					<useSystemClassLoader>false</useSystemClassLoader>
-					<includes>
-						<include>**/directory/Test*.java</include>
-					</includes>
+
+
+					<!-- <testFailureIgnore>true</testFailureIgnore> <skip>false</skip> 
+						<reuseForks>false</reuseForks> <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> 
+						<argLine>-Dfile.encoding=UTF-8</argLine> <useSystemClassLoader>false</useSystemClassLoader> 
+						<includes> <include>**/directory/Test*.java</include> </includes> -->
+
 					<suiteXmlFiles>
 						<suiteXmlFile>src\test\resource\runner\testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
+
 					<argLine>
 						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
 					</argLine>
